force-app/main/default/objects/Krow__Timesheet__c/Krow__Timesheet__c.object-meta.xml
<CustomObject>
    <description>This is time entry for the project and task for a user.</description>
    <label>Timesheet</label>
    <nameField>
        <displayFormat>T{00000000}</displayFormat>
        <label>Timesheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>