force-app/main/default/objects/Krow__Timesheet__c/fields/Krow__Approver_Comment__c.field-meta.xml
<CustomField>
    <fullName>Krow__Approver_Comment__c</fullName>
    <label>Approver Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>