force-app/main/default/objects/Krow__Timesheet__c/fields/Krow__Intacct_Timesheet_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Intacct_Timesheet_Id__c</fullName>
    <description>This is intacct timehseet id which is created in intacct.</description>
    <label>Intacct Timesheet Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>