force-app/main/default/objects/Krow__Timesheet__c/fields/Krow__Scheduled_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Scheduled_Hours__c</fullName>
    <description>Represent all scheduled hours from all Project Assignments Schedules which are filled under the timesheet dates.</description>
    <label>Scheduled Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>