force-app/main/default/objects/Krow__Timesheet__c/fields/Krow__Task_Timesheet_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Task_Timesheet_Hours__c</fullName>
    <description>Holds sum of total hours of timesheet detail(s).</description>
    <label>Timesheet Hours</label>
    <summarizedField>Krow__Timesheet_Detail__c.Krow__Total_Hours__c</summarizedField>
    <summaryForeignKey>Krow__Timesheet_Detail__c.Krow__Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>