force-app/main/default/objects/Krow__Timesheet__c/fields/Krow__Total_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Billable_Hours__c</fullName>
    <description>Holds the total billable hours from Timesheet Detail and Task Time.</description>
    <label>Deprecated1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>