force-app/main/default/objects/Krow__Timesheet__c/fields/Krow__Total_Billable_Hours_New__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Billable_Hours_New__c</fullName>
    <label>Total Billable Hours</label>
    <summarizedField>Krow__Timesheet_Split__c.Krow__Hours__c</summarizedField>
    <summaryFilterItems>
        <field>Krow__Timesheet_Split__c.Krow__Billable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Krow__Timesheet_Split__c.Krow__Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>