force-app/main/default/objects/Krow__Timesheet__c/fields/Krow__Total_Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Cost_Amount__c</fullName>
    <label>Total Cost Amount</label>
    <summarizedField>Krow__Timesheet_Split__c.Krow__Cost_Amount__c</summarizedField>
    <summaryForeignKey>Krow__Timesheet_Split__c.Krow__Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>