force-app/main/default/objects/Krow__Timesheet__c/fields/Krow__Total_Task_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Task_Time_Hours__c</fullName>
    <description>Holds total hours of all task times again the timesheet.</description>
    <label>Task Time Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>