force-app/main/default/objects/Krow__Timesheet__c/fields/Krow__User__c.field-meta.xml
<CustomField>
    <fullName>Krow__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is for which a timesheet is filled.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>