force-app/main/default/objects/Krow__Timesheet__c/fields/Krow__Utilization__c.field-meta.xml
<CustomField>
    <fullName>Krow__Utilization__c</fullName>
    <formula>IF(OR(ISBLANK(Krow__Scheduled_Hours__c), IF(Krow__Scheduled_Hours__c = 0, TRUE, FALSE)), NULL, Krow__Total_Billable_Hours_New__c / Krow__Scheduled_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>