force-app/main/default/objects/Krow__Timesheet__c/listViews/Krow__All.listView-meta.xml
<ListView>
    <fullName>Krow__All</fullName>
    <columns>NAME</columns>
    <columns>Krow__Approval_Status__c</columns>
    <columns>Krow__Project_Resource__c</columns>
    <columns>Krow__Project__c</columns>
    <columns>Krow__Week_Start_Date__c</columns>
    <columns>Krow__Week_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>